# ctsa

./: .gitignore  CMakeLists.txt  README.md
components_copyright/: ACM_COPYRIGHT  CC0  MIT_COPYRIGHT
ctsa_visualStudio2010/cstaTest/: cstaTest.sdf  cstaTest.sln  readme.txt
ctsa_visualStudio2010/cstaTest/Debug/: cstaTest.ilk
ctsa_visualStudio2010/cstaTest/cstaTest/: ReadMe.txt  boxjenkins.h  brent.c  conjgrad.h  cstaTest.cpp  cstaTest.vcxproj  cstaTest.vcxproj.filters  ctsa.c  ctsa.h  dist.c  dist.h  emle.c  emle.h  filter.c  filter.h  initest.h  lls.h  lnsrchmp.c  lnsrchmp.h  matrix.h  neldermead.h  newtonmin.c  newtonmin.h  nls.c  optimc.c  polyroot.h  pred.c  regression.c  secant.h  spectrum.c  stdafx.cpp  talg.c  talg.h
ctsa_visualStudio2010/cstaTest/cstaTest/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  cstaTest.lastbuildstate  cstaTest.pch  cstaTest_manifest.rc  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
ctsa_visualStudio2010/cstaTest/ipch/cstatest-2ea77471/: cstatest-e968cbb7.ipch
data/: 1m-20241125_001625-20241125_165625.csv  eusm.txt  itdaily.txt  lynx.txt  ohlc_min.csv  seriesA.txt  seriesB.txt  seriesD.txt  seriesF.txt  sunspots.txt  taylor.txt  usdaily.txt  wineind.txt
doc/: minunit_prez.md
documentation/HTML/: Thumbs.db  dyadwaves-0.2.0.0.html  dyadwaves-0.2.0.0.html~
header/: ctsa.h
src/: CMakeLists.txt  autoutils.c  autoutils.h  boxcox.c  boxcox.h  boxjenkins.c  boxjenkins.h  brent.c  brent.h  conjgrad.c  conjgrad.h  conv.c  conv.h  ctsa.c  ctsa.h  dist.c  dist.h  emle.c  emle.h  erfunc.c  erfunc.h  errors.c  errors.h  filter.c  filter.h  hsfft.c  hsfft.h  initest.c  initest.h  lls.c  lls.h  lnsrchmp.c  lnsrchmp.h  matrix.c  matrix.h  neldermead.c  neldermead.h  newtonmin.c  newtonmin.h  nls.c  (+35 more)
test/: CMakeLists.txt  acftest  acftest.c  arimatest  arimatest.c  artest  artest.c  artest2  artest2.c  autoarimatest1  autoarimatest1.c  autoarimatest2  autoarimatest2.c  autoarimatest3  autoarimatest3.c  auxlib.c  auxlib.h  csv_in.c  csv_in.h  dwttests  dwttests.c  minunit.h  misctests  misctests.c  pacftest  pacftest.c  sarimatest  sarimatest.c  sarimatest2.c  sarimatest3.c  sarimatest_mu.c  sarimaxtest1  sarimaxtest1.c  sarimaxtest2  sarimaxtest2.c  sarimaxtest3  sarimaxtest3.c  seriesC.txt  seriesG.txt  sine.txt
tsdata/: tsdata.h
